# learn-cpp

./: .gitignore  CMakeLists.txt  README.md  section_summary.txt
01_01_comments/: main.cpp
01_02_variables/: main.cpp
01_03_iostream/: main.cpp
01_basics/01_02_variables/: main.cpp
01_basics/01_04_naming_conventions/: main.cpp
02_02_function_forward_declaration/: main.cpp
02_basics_function_and_files/02_01_functions/: main.cpp
02_basics_function_and_files/02_03_directives/: main.cpp
02_basics_function_and_files/02_04_header_files/: headers.cpp  headers.h
03_01_sizeof/: main.cpp
03_03_scientific_notation/: main.cpp
03_05_boolean/: main.cpp
03_07_type_conversion/: main.cpp
03_10_strings/: main.cpp
03_fundamental_data_types/03_02_integers/: main.cpp
03_fundamental_data_types/03_04_floating_point/: main.cpp
03_fundamental_data_types/03_06_char/: main.cpp
03_fundamental_data_types/03_08_constants/: main.cpp
03_fundamental_data_types/03_09_numeral_systems/: main.cpp
03_fundamental_data_types/03_10_strings/: main.cpp
04_02_increment_decrement_operators/: main.cpp
04_operators/04_01_exponentiation/: main.cpp
04_operators/04_03_comma_operator_comma_separator/: main.cpp
04_operators/04_04_conditional_operator/: main.cpp
05_02_bitwise_operators/: main.cpp
05_bit_manipulation/05_01_bit_manipulation/: main.cpp
06_01_namespaces/: main.cpp
06_02_local_and_global_variables/: main.cpp
06_04_inline_variables/: inline_variables.h  main.cpp
06_scope_duration_linkage/06_02_local_and_global_variables/: main.cpp
06_scope_duration_linkage/06_03_linkage/: main.cpp
06_scope_duration_linkage/06_05_constexpr_consteval/: main.cpp
06_scope_duration_linkage/06_06_unnamed_and_inline_namespaces/: main.cpp
07_control_flow/07_01_if_else/: main.cpp
07_control_flow/07_02_switch/: main.cpp
07_control_flow/07_03_goto/: main.cpp
07_control_flow/07_04_while/: main.cpp
07_control_flow/07_05_for/: main.cpp
07_control_flow/07_06_halts/: main.cpp
07_control_flow/07_07_assert/: main.cpp
08_type_conversion_function_overloading/08_01_implicit_conversion/: main.cpp
08_type_conversion_function_overloading/08_02_numeric_promotions/: main.cpp
08_type_conversion_function_overloading/08_03_numeric_conversions/: main.cpp
08_type_conversion_function_overloading/08_04_arithmetic_conversions/: main.cpp
08_type_conversion_function_overloading/08_05_static_cast/: main.cpp
08_type_conversion_function_overloading/08_06_typedef_and_type_alias/: main.cpp
08_type_conversion_function_overloading/08_07_type_deduction_objects/: main.cpp
08_type_conversion_function_overloading/08_08_type_deduction_functions/: main.cpp
08_type_conversion_function_overloading/08_09_function_overloading/: main.cpp
08_type_conversion_function_overloading/08_10_default_arguments/: main.cpp
08_type_conversion_function_overloading/08_11_function_templates/: function_templates.h  main.cpp
09_references_and_pointers/09_01_lvalue_reference/: main.cpp
09_references_and_pointers/09_02_lvalue_reference_to_const/: main.cpp
09_references_and_pointers/09_03_pass_by_lvalue_reference/: main.cpp
09_references_and_pointers/09_04_pointers/: main.cpp
09_references_and_pointers/09_05_null_pointers/: main.cpp
09_references_and_pointers/09_06_pointers_and_const/: main.cpp
09_references_and_pointers/09_07_pass_by_address/: main.cpp
09_references_and_pointers/09_08_return_by_reference_and_address/: main.cpp
09_references_and_pointers/09_09_type_deduction_references_pointers/: main.cpp
10_enums_and_structs/10_01_user_defined_types/: main.cpp  main.h
10_enums_and_structs/10_02_unscoped_enumerations/: main.cpp
10_enums_and_structs/10_03_scoped_enumerations/: main.cpp
10_enums_and_structs/10_04_structs_and_members/: main.cpp
10_enums_and_structs/10_05_struct_passing/: main.cpp
10_enums_and_structs/10_06_member_selection_with_pointer_and_reference/: main.cpp
10_enums_and_structs/10_07_class_templates/: main.cpp
10_enums_and_structs/10_08_class_template_argument_deduction/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_01_arrays_1/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_02_arrays_2/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_03_loops_and_arrays/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_04_selection_sort/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_05_multidimensional_arrays/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_06_c_style_strings/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_07_string_views/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_08_dynamic_memory_allocation/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_09_foreach_loops/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_10_void_pointer/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_11_std_array/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_12_std_vector/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_13_iterators/: main.cpp
11_arrays_strings_and_dynamic_allocation/11_14_std_library_algorithms/: main.cpp
12_functions/12_01_function_pointers/: main.cpp
12_functions/12_02_vector_capacity/: main.cpp
12_functions/12_03_recursion/: main.cpp
12_functions/12_04_cmd_line_arguments/: main.cpp
12_functions/12_05_lambdas/: main.cpp
13_oo_programming/13_01_classes/: main.cpp
13_oo_programming/13_02_class_in_header/: class_in_header.cpp  class_in_header.h
13_oo_programming/13_03_friend_functions_and_classes/: main.cpp
13_oo_programming/13_04_anonymous_objects/: main.cpp
13_oo_programming/13_05_nesting_types/: main.cpp
13_oo_programming/13_06_timing_code/: main.cpp
14_operator_overloading/14_01_overloading_with_friend_functions/: main.cpp
14_operator_overloading/14_02_overloading_with_normal_functions/: main.cpp
14_operator_overloading/14_03_overloading_with_member_functions/: main.cpp
14_operator_overloading/14_04_overloading_IO_operators/: main.cpp
14_operator_overloading/14_05_explicit_constructor/: main.cpp
(+1 files in other folders)
