cmake_minimum_required(VERSION 3.25)
project(learncpp)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY target)
set(CMAKE_CXX_STANDARD 23)

add_executable(01_01_comments 01_01_comments/main.cpp)
add_executable(01_02_variables 01_02_variables/main.cpp)
add_executable(01_03_iostream 01_03_iostream/main.cpp)
add_executable(01_04_naming_conventions 01_04_naming_conventions/main.cpp)
add_executable(02_01_functions 02_01_functions/main.cpp)
add_executable(02_02_function_forward_declaration 02_02_function_forward_declaration/main.cpp)
add_executable(02_03_directives 02_03_directives/main.cpp)
add_executable(02_04_header_files 02_04_header_files/headers.cpp)
add_executable(03_01_sizeof 03_01_sizeof/main.cpp)
add_executable(03_02_integers 03_02_integers/main.cpp)
add_executable(03_03_scientific_notation 03_03_scientific_notation/main.cpp)
add_executable(03_04_floating_point 03_04_floating_point/main.cpp)
add_executable(03_05_boolean 03_05_boolean/main.cpp)
add_executable(03_06_char 03_06_char/main.cpp)
add_executable(03_07_type_conversion 03_07_type_conversion/main.cpp)
add_executable(03_08_constants 03_08_constants/main.cpp)
add_executable(03_09_numeral_systems 03_09_numeral_systems/main.cpp)
add_executable(03_10_strings 03_10_strings/main.cpp)
add_executable(04_01_exponentiation 04_01_exponentiation/main.cpp)
add_executable(04_02_increment_decrement_operators 04_02_increment_decrement_operators/main.cpp)
add_executable(04_03_comma_operator_comma_separator 04_03_comma_operator_comma_separator/main.cpp)
add_executable(04_04_conditional_operator 04_04_conditional_operator/main.cpp)