cmake_minimum_required(VERSION 3.25)
project(learncpp)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY target)
set(CMAKE_CXX_STANDARD 23)

add_executable("01_01_comments" "01_basics/01_01_comments/main.cpp")
add_executable("01_02_variables" "01_basics/01_02_variables/main.cpp")
add_executable("01_03_iostream" "01_basics/01_03_iostream/main.cpp")
add_executable("01_04_naming_conventions" "01_basics/01_04_naming_conventions/main.cpp")
add_executable("02_01_functions" "02_basics_function_and_files/02_01_functions/main.cpp")
add_executable("02_02_function_forward_declaration" "02_basics_function_and_files/02_02_function_forward_declaration/main.cpp")
add_executable("02_03_directives" "02_basics_function_and_files/02_03_directives/main.cpp")
add_executable("02_04_header_files" "02_basics_function_and_files/02_04_header_files/headers.cpp")
add_executable("03_01_sizeof" "03_fundamental_data_types/03_01_sizeof/main.cpp")
add_executable("03_02_integers" "03_fundamental_data_types/03_02_integers/main.cpp")
add_executable("03_03_scientific_notation" "03_fundamental_data_types/03_03_scientific_notation/main.cpp")
add_executable("03_04_floating_point" "03_fundamental_data_types/03_04_floating_point/main.cpp")
add_executable("03_05_boolean" "03_fundamental_data_types/03_05_boolean/main.cpp")
add_executable("03_06_char" "03_fundamental_data_types/03_06_char/main.cpp")
add_executable("03_07_type_conversion" "03_fundamental_data_types/03_07_type_conversion/main.cpp")
add_executable("03_08_constants" "03_fundamental_data_types/03_08_constants/main.cpp")
add_executable("03_09_numeral_systems" "03_fundamental_data_types/03_09_numeral_systems/main.cpp")
add_executable("03_10_strings" "03_fundamental_data_types/03_10_strings/main.cpp")
add_executable("04_01_exponentiation" "04_operators/04_01_exponentiation/main.cpp")
add_executable("04_02_increment_decrement_operators" "04_operators/04_02_increment_decrement_operators/main.cpp")
add_executable("04_03_comma_operator_comma_separator" "04_operators/04_03_comma_operator_comma_separator/main.cpp")
add_executable("04_04_conditional_operator" "04_operators/04_04_conditional_operator/main.cpp")
add_executable("05_01_bit_manipulation" "05_bit_manipulation/05_01_bit_manipulation/main.cpp")
add_executable("05_02_bitwise_operators" "05_bit_manipulation/05_02_bitwise_operators/main.cpp")
add_executable("06_01_namespaces" "06_scope_duration_linkage/06_01_namespaces/main.cpp")
add_executable("06_02_local_and_global_variables" "06_scope_duration_linkage/06_02_local_and_global_variables/main.cpp")
add_executable("06_03_linkage" "06_scope_duration_linkage/06_03_linkage/main.cpp")
add_executable("06_04_inline_variables" "06_scope_duration_linkage/06_04_inline_variables/main.cpp" "06_scope_duration_linkage/06_04_inline_variables/inline_variables.h")
add_executable("06_05_constexpr_consteval" "06_scope_duration_linkage/06_05_constexpr_consteval/main.cpp")
add_executable("06_06_unnamed_and_inline_namespaces" "06_scope_duration_linkage/06_06_unnamed_and_inline_namespaces/main.cpp")
add_executable("07_01_if_else" "07_control_flow/07_01_if_else/main.cpp")
add_executable("07_02_switch" "07_control_flow/07_02_switch/main.cpp")
add_executable("07_03_goto" "07_control_flow/07_03_goto/main.cpp")
add_executable("07_04_while" "07_control_flow/07_04_while/main.cpp")
add_executable("07_05_for" "07_control_flow/07_05_for/main.cpp")
add_executable("07_06_halts" "07_control_flow/07_06_halts/main.cpp")
add_executable("07_07_assert" "07_control_flow/07_07_assert/main.cpp")