cmake_minimum_required(VERSION 3.25)
project(learncpp)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY target)
set(CMAKE_CXX_STANDARD 23)
set(sections "./")
file(GLOB sections LIST_DIRECTORIES true YourGLOBPattern)
foreach(dir ${sources_list})
    IF(IS_DIRECTORY ${dir})
        add_subdirectory(${dir})
    ELSE()
        CONTINUE()
    ENDIF()
endforeach()

add_executable("01_01_comments" "01_basics/01_01_comments/main.cpp")
add_executable("01_02_variables" "01_basics/01_02_variables/main.cpp")
add_executable("01_03_iostream" "01_basics/01_03_iostream/main.cpp")
add_executable("01_04_naming_conventions" "01_basics/01_04_naming_conventions/main.cpp")
add_executable("02_01_functions" "02_basics_function_and_files/02_01_functions/main.cpp")
add_executable("02_02_function_forward_declaration" "02_basics_function_and_files/02_02_function_forward_declaration/main.cpp")
add_executable("02_03_directives" "02_basics_function_and_files/02_03_directives/main.cpp")
add_executable("02_04_header_files" "02_basics_function_and_files/02_04_header_files/headers.cpp")
add_executable("03_01_sizeof" "03_fundamental_data_types/03_01_sizeof/main.cpp")
add_executable("03_02_integers" "03_fundamental_data_types/03_02_integers/main.cpp")
add_executable("03_03_scientific_notation" "03_fundamental_data_types/03_03_scientific_notation/main.cpp")
add_executable("03_04_floating_point" "03_fundamental_data_types/03_04_floating_point/main.cpp")
add_executable("03_05_boolean" "03_fundamental_data_types/03_05_boolean/main.cpp")
add_executable("03_06_char" "03_fundamental_data_types/03_06_char/main.cpp")
add_executable("03_07_type_conversion" "03_fundamental_data_types/03_07_type_conversion/main.cpp")
add_executable("03_08_constants" "03_fundamental_data_types/03_08_constants/main.cpp")
add_executable("03_09_numeral_systems" "03_fundamental_data_types/03_09_numeral_systems/main.cpp")
add_executable("03_10_strings" "03_fundamental_data_types/03_10_strings/main.cpp")
add_executable("04_01_exponentiation" "04_operators/04_01_exponentiation/main.cpp")
add_executable("04_02_increment_decrement_operators" "04_operators/04_02_increment_decrement_operators/main.cpp")
add_executable("04_03_comma_operator_comma_separator" "04_operators/04_03_comma_operator_comma_separator/main.cpp")
add_executable("04_04_conditional_operator" "04_operators/04_04_conditional_operator/main.cpp")
add_executable("05_01_bit_manipulation" "05_bit_manipulation/05_01_bit_manipulation/main.cpp")
add_executable("05_02_bitwise_operators" "05_bit_manipulation/05_02_bitwise_operators/main.cpp")
add_executable("06_01_namespaces" "06_scope_duration_linkage/06_01_namespaces/main.cpp")
add_executable("06_02_local_and_global_variables" "06_scope_duration_linkage/06_02_local_and_global_variables/main.cpp")
add_executable("06_03_linkage" "06_scope_duration_linkage/06_03_linkage/main.cpp")
add_executable("06_04_inline_variables" "06_scope_duration_linkage/06_04_inline_variables/main.cpp" "06_scope_duration_linkage/06_04_inline_variables/inline_variables.h")
add_executable("06_05_constexpr_consteval" "06_scope_duration_linkage/06_05_constexpr_consteval/main.cpp")
add_executable("06_06_unnamed_and_inline_namespaces" "06_scope_duration_linkage/06_06_unnamed_and_inline_namespaces/main.cpp")
add_executable("07_01_if_else" "07_control_flow/07_01_if_else/main.cpp")
add_executable("07_02_switch" "07_control_flow/07_02_switch/main.cpp")
add_executable("07_03_goto" "07_control_flow/07_03_goto/main.cpp")
add_executable("07_04_while" "07_control_flow/07_04_while/main.cpp")
add_executable("07_05_for" "07_control_flow/07_05_for/main.cpp")
add_executable("07_06_halts" "07_control_flow/07_06_halts/main.cpp")
add_executable("07_07_assert" "07_control_flow/07_07_assert/main.cpp")
add_executable("08_01_implicit_conversion" "08_type_conversion_function_overloading/08_01_implicit_conversion/main.cpp")
add_executable("08_02_numeric_promotions" "08_type_conversion_function_overloading/08_02_numeric_promotions/main.cpp")
add_executable("08_03_numeric_conversions" "08_type_conversion_function_overloading/08_03_numeric_conversions/main.cpp")
add_executable("08_04_arithmetic_conversions" "08_type_conversion_function_overloading/08_04_arithmetic_conversions/main.cpp")
add_executable("08_05_static_cast" "08_type_conversion_function_overloading/08_05_static_cast/main.cpp")
add_executable("08_06_typedef_and_type_alias" "08_type_conversion_function_overloading/08_06_typedef_and_type_alias/main.cpp")
add_executable("08_07_type_deduction_objects" "08_type_conversion_function_overloading/08_07_type_deduction_objects/main.cpp")
add_executable("08_08_type_deduction_functions" "08_type_conversion_function_overloading/08_08_type_deduction_functions/main.cpp")
add_executable("08_09_function_overloading" "08_type_conversion_function_overloading/08_09_function_overloading/main.cpp")
add_executable("08_10_default_arguments" "08_type_conversion_function_overloading/08_10_default_arguments/main.cpp")
add_executable("08_11_function_templates" "08_type_conversion_function_overloading/08_11_function_templates/main.cpp")
add_executable("09_01_lvalue_reference" "09_references_and_pointers/09_01_lvalue_reference/main.cpp")
add_executable("09_02_lvalue_reference_to_const" "09_references_and_pointers/09_02_lvalue_reference_to_const/main.cpp")
add_executable("09_03_pass_by_lvalue_reference" "09_references_and_pointers/09_03_pass_by_lvalue_reference/main.cpp")
add_executable("09_04_pointers" "09_references_and_pointers/09_04_pointers/main.cpp")
add_executable("09_05_null_pointers" "09_references_and_pointers/09_05_null_pointers/main.cpp")
add_executable("09_06_ponters_and_const" "09_references_and_pointers/09_06_pointers_and_const/main.cpp")
add_executable("09_07_pass_by_address" "09_references_and_pointers/09_07_pass_by_address/main.cpp")
add_executable("09_08_return_by_reference_and_address" "09_references_and_pointers/09_08_return_by_reference_and_address/main.cpp")
add_executable("09_09_type_deduction_references_pointers" "09_references_and_pointers/09_09_type_deduction_references_pointers/main.cpp")
add_executable("10_01_user_defined_types" "10_enums_and_structs/10_01_user_defined_types/main.cpp")
add_executable("10_02_unscoped_enumerations" "10_enums_and_structs/10_02_unscoped_enumerations/main.cpp")
add_executable("10_03_scoped_enumerations" "10_enums_and_structs/10_03_scoped_enumerations/main.cpp")
add_executable("10_04_structs_and_members" "10_enums_and_structs/10_04_structs_and_members/main.cpp")
add_executable("10_05_structs_passing" "10_enums_and_structs/10_05_struct_passing/main.cpp")
add_executable("10_06_member_selection_with_pointer_and_reference" "10_enums_and_structs/10_06_member_selection_with_pointer_and_reference/main.cpp")
add_executable("10_07_class_templates" "10_enums_and_structs/10_07_class_templates/main.cpp")
